2010-12-10  Bernd Hufmann  <bhufmann@gmail.com>

	* src/org/eclipse/linuxtools/lttng/ui/views/statistics/model/FixedArray.java (hashCode): Better hashing algorithm

2010-12-08  Francois Chouinard  <fchouinard@gmail.com>

	* src/org/eclipse/linuxtools/lttng/ui/views/controlflow/ControlFlowView.java: Fix the icon path
	* src/org/eclipse/linuxtools/lttng/ui/views/resources/ResourcesView.java: Fix the icon path

2010-11-25  Francois Chouinard  <fchouinard@gmail.com>

	* src/org/eclipse/linuxtools/lttng/ui/views/PerspectiveFactory.java: Removed TimeFrame View and the default LTTng perspective

2010-11-23  Francois Chouinard  <fchouinard@gmail.com> Added support for Stats tracing (in java) - no bug

	* .options: Added the SV tracing option
	* src/org/eclipse/linuxtools/lttng/ui/TraceDebug.java: Handling of the SV trace file
	* src/org/eclipse/linuxtools/lttng/ui/views/statistics/model/StatisticsTreeNode.java: Comparable + getContent() for improved tracing
	* src/org/eclipse/linuxtools/lttng/ui/views/statistics/StatisticsView.java: SV tracing points 

2010-11-22  Francois Chouinard  <fchouinard@gmail.com>

	* plugin.xml: Fixed the LTTng project nature ID
	* src/org/eclipse/linuxtools/lttng/ui/views/project/LTTngProjectNature.java: Ditto. 

2010-11-10  Francois Chouinard  <fchouinard@gmail.com>

    Suppress warning for non-externalized strings
	   * src/org/eclipse/linuxtools/lttng/ui/model/trange/TimeRangeComponent.java: 
	   * src/org/eclipse/linuxtools/lttng/ui/model/trange/TimeRangeComposite.java: 
	   * src/org/eclipse/linuxtools/lttng/ui/model/trange/TimeRangeEvent.java: 
	   * src/org/eclipse/linuxtools/lttng/ui/model/trange/TimeRangeEventProcess.java: 
	   * src/org/eclipse/linuxtools/lttng/ui/model/trange/TimeRangeEventResource.java: 
	   * src/org/eclipse/linuxtools/lttng/ui/model/trange/TimeRangeResourceFactory.java: 
	   * src/org/eclipse/linuxtools/lttng/ui/model/trange/TimeRangeViewerProvider.java: 