@@ -1,10 +1,22 @@
+/*******************************************************************************
+ * Copyright (c) 2010 Ericsson
+ * 
+ * All rights reserved. This program and the accompanying materials are
+ * made available under the terms of the Eclipse Public License v1.0 which
+ * accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ * 
+ * Contributors:
+ *   Bernd Hufmann - Initial API and implementation
+ *******************************************************************************/
+
 package org.eclipse.linuxtools.lttng;
 
 /**
- * LTTng specific constants
- * 
- * @author eedbhu
- *
+ * <b><u>LttngConstants</u></b>
+ * <p>
+ * Declaration of LTTng specific constants.
+ * <p>
  */
 public class LttngConstants {
 
